Example yamls/Networking/example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      role: internal
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            name: payroll
      ports:
        - port: 8080
          protocol: TCP
    - to:
      - podSelector:
          matchLabels:
            name: mysql
      ports:
        - port: 3306
          protocol: TCP
